--- a/lume_sales/static/src/scss/product_product_views.scss
+++ b/lume_sales/static/src/scss/product_product_views.scss
@@ -30,6 +30,12 @@
     color: white;
 }
 
+.catalog_card_hide{
+    order: 3;
+    opacity: 0.5;
+    box-shadow: none;
+}
+
 :root{
     --curve: 10px;
 }
