--- a/lume_sales/static/src/scss/product_product_views.scss
+++ b/lume_sales/static/src/scss/product_product_views.scss
@@ -31,9 +31,10 @@
 }
 
 .catalog_card_hide{
-    order: 3;
+    // order: 3;
     opacity: 0.5;
     box-shadow: none;
+    pointer-events: none;
 }
 
 :root{
