--- a/metrc_retail_pos/views/pos_order_view.xml
+++ b/metrc_retail_pos/views/pos_order_view.xml
@@ -6,6 +6,18 @@
         <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
         <field name="arch" type="xml">
             <data>
+                <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="customer_type"/>
+                    <field name="patient_license_number"
+                           attrs="{'required': [('customer_type', '!=', 'Consumer')],
+                               'invisible': [('customer_type', '=', 'Consumer')]}"/>
+                    <field name="caregiver_license_number"
+                           attrs="{'required': [('customer_type', '=', 'Caregiver')],
+                               'invisible': [('customer_type', '!=', 'Caregiver')]}"/>
+                    <field name="ext_patient_id_method"
+                           attrs="{'required': [('customer_type', '=', 'External Patient')],
+                               'invisible': [('customer_type', '!=', 'External Patient')]}"/>
+                </xpath>
                 <xpath expr="//notebook/page[last()]" position="after">
                     <page string="Metrc Information">
                         <group>
