--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -36,12 +36,14 @@
                                             <li><strong>On hand: <field name="qty_available"/> <field name="uom_id"/></strong></li>
                                             <li><strong><field name="thc_type"/></strong></li>
                                             <li>
-                                                <t t-if="record.categ_id.raw_value">
-                                                    Mg: <t t-esc="record.categ_id.raw_value"/>
-                                                </t>
-                                                <t t-else="">
-                                                    <t t-esc="record.categ_id.raw_value"/>%
-                                                </t>
+                                                <strong>
+                                                    <t t-if="record.categ_id.value.includes('Edibles') || record.categ_id.value.includes('Topical')">
+                                                        Mg: <field name="thc"/>
+                                                    </t>
+                                                    <t t-else="">
+                                                        <field name="thc"/>%
+                                                    </t>
+                                                </strong>
                                             </li>
                                         </ul>
                                     </div>
