--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -13,6 +13,7 @@
                 <field name="uom_id"/>
                 <field name="thc_type"/>
                 <field name="categ_id"/>
+                <field name="quantity_at_warehouses"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div class="o_kanban_record d-flex o_lpc_industry_product" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}">
