--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -35,7 +35,7 @@
                                             <li><strong>Price: <field name="list_price" widget="monetary" options="{'currency_field': 'currency_id'}"></field></strong></li>
                                             <field name="currency_id" invisible="True"/>
                                             <li><strong>On hand: 
-                                                <t t-esc="JSON.parse(record.quantity_at_warehouses.raw_value)[context.get('warehouse_id')]"></t>
+                                                <t t-esc="JSON.parse(record.quantity_at_warehouses.raw_value)[context.warehouse_id + '']"/>
                                                 <!-- <field name="qty_available"/>  -->
                                                 <field name="uom_id"/></strong></li>
                                             <li><strong><field name="thc_type"/></strong></li>
