--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -21,6 +21,9 @@
                     <field name="order_type" invisible="1"></field>
                     <field name="product_id" attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" options="{'no_open': True}" force_save="1" context="{'partner_id': parent.partner_id,'quantity': product_uom_qty,'pricelist': parent.pricelist_id,'uom':product_uom,'company_id': parent.company_id,'default_lst_price': price_unit,'default_description_sale': name}" domain="[('sale_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', company_id),('thc_type','=',order_type),('type','!=','service')]" widget="product_configurator" />
                 </xpath>
+                <field name="date_order" position="after">
+                    <field name="fulfillment_type"/>
+                </field>
                 <!-- Custom Add Product Button -->
                 <field name="order_line" position="after">
                     <!-- <button name="open_catalog" string="Add a Product (popup)" class="btn-primary oe_edit_only" type="object"/>
