[ADD|IMP] metrc_retail_pos_improvements. - Added patient_llicense_number, Caregiver_license_number,_ext_patient_id_method fields on pos order and alsso tunneled field vales from pos fronend to pos backend. - Added a popup to interact with license related information with user.

--- a/metrc_retail_pos/views/pos_assets_common.xml
+++ b/metrc_retail_pos/views/pos_assets_common.xml
@@ -3,6 +3,8 @@
 <template id="metrc_retail_pos.assets" inherit_id="point_of_sale.assets">
     <xpath expr="." position="inside">
         <script type="text/javascript" src="/metrc_retail_pos/static/src/js/Screens/ClientListScreen/CustomClientListScreen.js"></script>
+        <script type="text/javascript" src="/metrc_retail_pos/static/src/js/Screens/ProductScreen/ProductScreen.js"></script>
+        <script type="text/javascript" src="/metrc_retail_pos/static/src/js/popups/LicensePopup.js"></script>
     </xpath>
 </template>
 </odoo>
