--- a/lume_sales/views/assets.xml
+++ b/lume_sales/views/assets.xml
@@ -7,6 +7,7 @@
             <script type="text/javascript" src="lume_sales/static/src/js/kanban_refresh.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/unread_messages.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/live_timer.js"></script>
+            <script type="text/javascript" src="lume_sales/static/src/js/so_timer.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/so_section_and_note.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/project_kanban.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/progressbar.js"></script>
