Grey out cards with qty of 0

--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -16,7 +16,7 @@
                 <field name="quantity_at_warehouses"/>
                 <templates>
                     <t t-name="kanban-box">
-                        <div class="o_kanban_record d-flex o_lpc_industry_product" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}">
+                        <div t-attf-class="o_kanban_record d-flex o_lpc_industry_product {{'catalog_card_hide' if JSON.parse(record.quantity_at_warehouses.raw_value)[context.warehouse_id + ''] == 0}}" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}" t-attf-data-qty="{{JSON.parse(record.quantity_at_warehouses.raw_value)[context.warehouse_id + '']}}">
                             <div class="o_kanban_image">
                                 <img t-att-src="kanban_image('product.product', 'image_128', record.id.raw_value)" alt="Product" class="o_image_64_contain"/>
                             </div>
