--- a/metrc_stock/views/stock_picking_views.xml
+++ b/metrc_stock/views/stock_picking_views.xml
@@ -17,9 +17,11 @@
                     </div>
                 </header>
                 <div class="oe_button_box" position="inside">
+                    <field name="metrc_transfer_count" invisible="1"/>
                     <button name="action_open_metrc_transfer" string="Metrc Transfers" 
                             type="object" class="oe_stat_button" icon="fa-bars" 
-                            attrs="{'invisible': [('require_metrc_validation', '=', False)]}"
+                            attrs="{'invisible': ['|', ('require_metrc_validation', '=', False),
+                                                  ('metrc_transfer_count', '=', 0)]}"
                             states="done"/>
                 </div>
                 <field name="partner_id" position="after">
