--- a/metrc_stock/views/stock_views.xml
+++ b/metrc_stock/views/stock_views.xml
@@ -41,10 +41,15 @@
         <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
             <field name="lot_id" position="after">
-                <field name="lot_qty" readonly="1"/>
+                <field name="lot_qty" readonly="1"
+                       attrs="{'column_invisible': ['|', ('parent.picking_type_code', '=', 'incoming'), 
+                                            ('parent.state', 'in', ['done','cancel'])]}"/>
                 <field name="move_id" invisible="1"/>
                 <field name="split_needed" invisible="1"/>
-                <button name="split_quantity" type="object" icon="fa-files-o" class="btn-link" attrs="{'invisible': ['|', ('split_needed', '=', False), ('state', 'in', ['done', 'cancel'])]}"/>
+                <button name="split_quantity" type="object" 
+                        icon="fa-files-o" class="btn-link" 
+                        attrs="{'invisible': ['|', ('split_needed', '=', False), 
+                        ('state', 'in', ['done', 'cancel'])]}"/>
             </field>
         </field>
     </record>
