--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -103,9 +103,10 @@
         <xpath expr="//search/filter" position="before">
           <!-- <filter string="Medical Customers" name="medical" domain="[('partner_id.is_medical','=',True)]"/> -->
           <!-- <filter string="Recreational Customers" name="recreational" domain="[('partner_id.is_medical','=',False)]"/> -->
-          <filter string="Curbside" name="curb" domain="[('fulfillment_type','=','delivery')]"/>
+          <filter string="Curbside" name="curb" domain="[('fulfillment_type','=','curb')]"/>
           <filter string="In Store" name="in_store" domain="[('fulfillment_type','=','store')]"/>
           <filter string="Online Order" name="online" domain="[('fulfillment_type','=','online')]"/>
+          <filter string="Delivery" name="delivery" domain="[('fulfillment_type','=','delivery')]"/>
           <separator/>
         </xpath>
       </field>
