--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -15,7 +15,7 @@
                     <attribute name="string">Picks</attribute>
                 </xpath>
                 <xpath expr="//div[@class='oe_button_box']" position="inside">
-                    <button class="oe_stat_button" type="action" name="%(lume_sales.order_history)d" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('partner_sale_order_count', '=', False)]}">
+                    <button class="oe_stat_button" type="object" name="open_order_history" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('partner_sale_order_count', '=', False)]}">
                         <field string="Order History" name="partner_sale_order_count" widget="statinfo" modifiers="{'readonly':true}" id="sale_order_count" />
                       </button>
                 </xpath>
