--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -225,15 +225,36 @@
                 </kanban>
             </field>
         </record>
+        <!-- Order History List View -->
+        <record model="ir.ui.view" id="view_sale_order_history_list">
+            <field name="name">sale.order.history.list</field>
+            <field name="model">sale.order</field>
+            <field name="arch" type="xml">
+                <tree create="0" edit="0">
+                    <field name="pos_terminal_id" string="Order Ref"/>
+                    <field name="session_id" string="Session"/>
+                    <field name="date_order"/>
+
+                    <field name="partner_id" string="Customer"/>
+                    <field name="user_id" string="Salesperson"/>
+                    <field name="fulfillment_partner_id" string="Fulfillment"/>
+                    <field name="cashier_partner_id" string="POS User"/>
+                    <field name="fulfillment_type" string="Fulfillment Method"/>
+                    <field name="payment_method" string="Payment Method"/>
+                    <field name="amount_total" string="Total"/>
+                    <field name="state" string="status"/>
+                </tree>
+            </field>
+        </record>
         <!-- Action to open order history -->
         <record id="order_history" model="ir.actions.act_window">
             <field name="name">Order History</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">sale.order</field>
-            <field name="view_mode">kanban</field>
+            <field name="view_mode">list</field>
             <!-- <field name="search_view_id" ref="sale.sale_order_view_search_inherit_sale"/> -->
-            <field name="view_id" ref="lume_sales.view_sale_order_history_kanban" />
-            <field name="context">{}</field>
+            <field name="view_id" ref="lume_sales.view_sale_order_history_list" />
+            <field name="context">{'search_default_partner_id': active_id, 'default_partner_id': active_id}</field>
             <field name="domain">[('state', 'not in', ('draft', 'sent', 'cancel'))]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
