--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -26,6 +26,9 @@
                     <field name="order_type" invisible="1"></field>
                     <field name="product_id" attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" options="{'no_open': True}" force_save="1" context="{'partner_id': parent.partner_id,'quantity': product_uom_qty,'pricelist': parent.pricelist_id,'uom':product_uom,'company_id': parent.company_id,'default_lst_price': price_unit,'default_description_sale': name}" domain="[('sale_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', company_id),('thc_type','=',order_type),('type','!=','service')]" widget="product_configurator" />
                 </xpath>
+                <xpath expr="//tree/field[@name='product_uom_qty']" position="attributes">
+                    <attribute name="widget">qty_widget</attribute>
+                </xpath>
                 <field name="date_order" position="after">
                     <field name="fulfillment_type"/>
                 </field>
