--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -232,6 +232,7 @@
         <record model="ir.ui.view" id="view_sale_order_history_list">
             <field name="name">sale.order.history.list</field>
             <field name="model">sale.order</field>
+            <field name="priority">4</field>
             <field name="arch" type="xml">
                 <tree create="0" edit="0">
                     <field name="pos_terminal_id" string="Order Ref"/>
