--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -232,7 +232,7 @@
         <record model="ir.ui.view" id="view_sale_order_history_list">
             <field name="name">sale.order.history.list</field>
             <field name="model">sale.order</field>
-            <field name="priority">4</field>
+            <field name="priority">0</field>
             <field name="arch" type="xml">
                 <tree create="0" edit="0">
                     <field name="pos_terminal_id" string="Order Ref"/>
@@ -246,7 +246,7 @@
                     <field name="fulfillment_type" string="Fulfillment Method"/>
                     <field name="payment_method" string="Payment Method"/>
                     <field name="amount_total" string="Total"/>
-                    <field name="state" string="status"/>
+                    <field name="state" string="Status" widget="badge" decoration-success="state == 'sale' or state == 'done'" decoration-info="state == 'draft' or state == 'sent'"/>
                 </tree>
             </field>
         </record>
@@ -255,7 +255,7 @@
             <field name="name">Order History</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">sale.order</field>
-            <field name="view_mode">list</field>
+            <field name="view_mode">tree,form</field>
             <!-- <field name="search_view_id" ref="sale.sale_order_view_search_inherit_sale"/> -->
             <field name="view_id" ref="lume_sales.view_sale_order_history_list" />
             <field name="context">{'search_default_partner_id': active_id, 'default_partner_id': active_id}</field>
