--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -62,6 +62,13 @@
                 <xpath expr="(//header/button[@name='action_confirm'])[1]" position="attributes">
                     <attribute name="attrs"></attribute>
                 </xpath>
+                <xpath expr="//header/button[@name='action_cancel']" position="attributes">
+                    <attribute name="string">Abandon Cart</attribute>
+                </xpath>
+                <!-- Not sure about this next one -->
+                <xpath expr="(//header/field)[2]" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
                 <xpath expr="(//header/button)[3]" position="replace">
                 </xpath>
                 <xpath expr="(//header/button)[4]" position="replace">
