--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -73,6 +73,9 @@
                 </xpath>
                 <xpath expr="(//header/button)[4]" position="replace">
                 </xpath>
+                <xpath expr="//div[@name='button_box]" position="after">
+                    <field name="partner_image" widget="image" class="oe_avatar" options="{&quot;preview_image&quot;: &quot;image_128&quot;}"/>
+                </xpath>
                 <field name="state" position="before">
                     <field name="threshold1" invisible="1"/>
                     <field name="threshold2" invisible="1"/>
