--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -73,7 +73,7 @@
                 </xpath>
                 <xpath expr="(//header/button)[4]" position="replace">
                 </xpath>
-                <xpath expr="//div[@name='button_box]" position="after">
+                <xpath expr="//div[@name='button_box']" position="after">
                     <field name="partner_image" widget="image" class="oe_avatar" options="{'preview_image': 'image_128'}"/>
                 </xpath>
                 <field name="state" position="before">
