--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -52,11 +52,21 @@
           <field name="passport" />
         </field>
         <!-- Replace fields we don't need to show -->
-        <field name="vat" position="replace" />
-        <field name="company_type" position="replace" />
-        <field name="function" position="replace" />
-        <field name="website" position="replace" />
-        <field name="title" position="replace" />
+        <field name="vat" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </field>
+        <field name="company_type" position="attributes" >
+          <attribute name="invisible">1</attribute>
+        </field>
+        <field name="function" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </field>
+        <field name="website" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </field>
+        <field name="title" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </field>
         <field name="parent_id" position="attributes">
           <attribute name="invisible">1</attribute>
         </field>
