--- a/lume_sales/wizards/note_wizard.xml
+++ b/lume_sales/wizards/note_wizard.xml
@@ -32,7 +32,7 @@
                         </kanban>
                     </field>
                     <field name="message"/>
-                    <button name="action_create_note" string="Add Note" type="Object" class="btn btn-primary"/>
+                    <button name="action_create_note" string="Add Note" type="object" class="btn btn-primary"/>
                     <footer>
                         <button name="action_ok" string="Ok" type="object" default_focus="1" class="oe_highlight" />
                     </footer>
