--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -114,6 +114,14 @@
           </field>
         </field>
       </field>
+      <field name="comment" position="after">
+        <field name="note_ids">
+          <tree>
+            <field name="message"/>
+            <field name="logged_partner_id"/>
+          </tree>
+        </field>
+      </field>
     </record>
   </data>
 </odoo>
