--- a/lume_sales/wizards/note_wizard.xml
+++ b/lume_sales/wizards/note_wizard.xml
@@ -10,13 +10,13 @@
                         Customer Notes
                     </h1>
                     <field name="partner_id" />
-                    <field name="note_ids">
+                    <!-- <field name="note_ids">
                         <tree>
                             <field name="message" />
                             <field name="logged_partner_id" />
                         </tree>
-                    </field>
-                    <!-- <field name="note_ids">
+                    </field> -->
+                    <field name="note_ids">
                         <kanban>
                             <field name="create_date"/>
                             <field name="logged_partner_id"/>
@@ -24,20 +24,21 @@
                             <field name="completed"/>
                             <templates>
                                 <t t-name="kanban-box">
-                                    <div class="oe_kanban_global_click">
+                                    <div class="oe_kanban_global_click" style="width: 100%;">
                                         <div class="o_kanban_image">
                                             <strong><field name="create_date"/></strong>
                                         </div>
                                         <div class="oe_kanban_details">
+                                            <strong class="o_left"><field name="create_date"/></strong>
                                             <strong><field name="logged_partner_id"/></strong>
                                             <field name="message"/>
-                                            <field name="completed"/>
+                                            <span class="o_right"><field name="completed" widget="boolean_favorite" nolabel="1" force_save="1"/></span>
                                         </div>
                                     </div>
                                 </t>
                             </templates>
                         </kanban>
-                    </field> -->
+                    </field>
                     <field name="message" />
                     <button name="action_create_note" string="Add Note" type="object" class="btn btn-primary" />
                     <footer>
