--- a/lume_sales/wizards/note_wizard.xml
+++ b/lume_sales/wizards/note_wizard.xml
@@ -9,13 +9,9 @@
                     <h1>
                         Customer Notes
                     </h1>
-                    <field name="partner_id"/>
-                    <!-- <field name="note_ids">
-                        <tree>
-                            <field name="message" />
-                            <field name="logged_partner_id" />
-                        </tree>
-                    </field> -->
+                    <!-- <field name="partner_id"/> -->
+                    <field name="message"/>
+                    <button name="action_create_note" string="Add Note" type="object" class="btn btn-primary"/>
                     <field name="note_ids" readonly="1">
                         <kanban>
                             <field name="create_date"/>
@@ -37,8 +33,6 @@
                             </templates>
                         </kanban>
                     </field>
-                    <field name="message"/>
-                    <button name="action_create_note" string="Add Note" type="object" class="btn btn-primary"/>
                     <footer>
                         <button name="action_ok" string="Ok" type="object" default_focus="1" class="oe_highlight"/>
                     </footer>
