--- a/lume_sales/wizards/note_wizard.xml
+++ b/lume_sales/wizards/note_wizard.xml
@@ -13,7 +13,7 @@
                     <field name="message"/>
                     <button name="action_create_note" string="Add Note" type="object" class="btn btn-primary"/>
                     <field name="note_ids" readonly="1">
-                        <kanban>
+                        <kanban limit="5">
                             <field name="create_date"/>
                             <field name="logged_partner_id"/>
                             <field name="message"/>
