--- a/lume_sales/static/src/scss/product_product_views.scss
+++ b/lume_sales/static/src/scss/product_product_views.scss
@@ -36,6 +36,12 @@
     box-shadow: none;
     pointer-events: none;
 }
+.catalog_card_hide_0{
+    // order: 3;
+    opacity: 0.5;
+    box-shadow: none;
+    pointer-events: none;
+}
 
 :root{
     --curve: 10px;
