make tabs invisible instead of deleted

--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -145,7 +145,7 @@
                                         <br />
                                         <span>
                                             Fulfillment:
-                                            <span>Placeholder</span>
+                                            <span><field name="fulfillment_type"/></span>
                                         </span>
                                         <br />
                                         <span>
