--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -71,16 +71,18 @@
           <attribute name="invisible">1</attribute>
         </field>
         <!-- Replace the tabs -->
-        <xpath expr="//notebook" position="replace">
-          <notebook colspan="4">
-            <page name="documents_and_images" string="Documents and Images">
-              <!-- Will probably look something like the original contacts tab -->
-              <!-- <field name="document_ids"/> -->
-            </page>
-            <page name="internal_notes" string="Internal Notes">
-              <field name="comment" placeholder="Internal note..." />
-            </page>
-          </notebook>
+        <xpath expr="//notebook/page[@name='contact_addresses']" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </xpath>
+        <xpath expr="//notebook/page[@name='sales_purchases']" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </xpath>
+
+        <xpath expr="//notebook/page[@name='internal_notes']" position="before">
+          <page name="documents_and_images" string="Documents and Images">
+            <!-- Will probably look something like the original contacts tab -->
+            <!-- <field name="document_ids"/> -->
+          </page>
         </xpath>
         <!-- Replace smart buttons -->
         <xpath expr="//div[@class='oe_button_box']" position="replace">
