--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -77,6 +77,12 @@
         <xpath expr="//notebook/page[@name='sales_purchases']" position="attributes">
           <attribute name="invisible">1</attribute>
         </xpath>
+        <xpath expr="//notebook/page[@name='accounting']" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </xpath>
+        <xpath expr="//notebook/page[@name='accounting_disabled']" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </xpath>
 
         <xpath expr="//notebook/page[@name='internal_notes']" position="before">
           <page name="documents_and_images" string="Documents and Images">
